installdir = $(pkgdatadir)/megaMod/buttons

dist_install_DATA = \
	0colors.png \
	3colors.png \
	blue.png \
	button_blue_off.png \
	button_green.png \
	button_yellow_off.png \
	cur.png \
	icon_norec_light.png \
	pointerdvd.png \
	red.png \
	slidebar100.png \
	slider30.png \
	1colors.png \
	4colors.png \
	br_downco.png \
	button_blue.png \
	button_red_off.png \
	button_yellow.png \
	green-big.png \
	icon_rec_light.png \
	pointer.png \
	selection3.png \
	slidebar350.png \
	upd_cl.png \
	2colors.png \
	5colors.png \
	br_downgr.png \
	button_green_off.png \
	button_red.png \
	cur100.png \
	green.png \
	red-big.png \
	selectionbw.png \
	slidebar.png \
	yellow.png
