installdir = $(pkgdatadir)/megaMod/icons

dist_install_DATA = \
	agcon.png \
	cable.png \
	ch_progressbw.png \
	clock.png \
	ico_crypt_off.png \
	ico_dolby_off.png \
	ico_format_off.png \
	ico_hd_off.png \
	icon_event.png \
	ico_txt_on.png \
	lang.png \
	pvr.png \
	repeat_off.png \
	right.png \
	scan-c.png \
	scan-t.png \
	snroff.png \
	sub.png \
	angle.png \
	cam.png \
	ch_progresscl.png \
	dtt.png \
	ico_crypt_on.png \
	ico_dolby_on.png \
	ico_format_on.png \
	ico_hd_on.png \
	ico_txt_off.png \
	info.png \
	left.png \
	menu.png \
	rchannel.png \
	repeat_on.png \
	sat.png \
	scan-s.png \
	slider30.png \
	snron.png \
	text.png
