installdir = $(pkgdatadir)/megaMod/menu

dist_install_DATA = \
	audio.png \
	dvd_player.png \
	fr_download.png \
	ico_crossepg.png \
	keyboard.png \
	media_player.png \
	no_coverArt.png \
	panelmp.png \
	pc.png \
	rec.png \
	scart_switch.png \
	sub.png \
	timer_edit.png \
	vkeyb.png \
	youtube.png \
	av.png \
	emu.png \
	hat.png \
	ico_mytube.png \
	lang.png \
	mosaicbk.png \
	panel1.png \
	panelwiz.png \
	plugin_selection.png \
	reset.png \
	setup_selection.png \
	sw.png \
	timezone.png \
	vtune.png \
	device.png \
	epg.png \
	hdd.png \
	info_screen.png \
	mosaic.png \
	panelbk.png \
	panelw.png \
	recpath.png \
	scan.png \
	standby_restart_list.png \
	system.png \
	tv.png \
	tv1.png \
	web_browser.png
