SUBDIRS = buttons icons

installdir = $(pkgdatadir)/megaMod/skin_default

dist_install_DATA = \
	1.png \
	bs_b.png \
	bs_r.png \
	bs_tr.png \
	div-h.png \
	epg_now.png \
	p_bar.png \
	progress_big.png \
	starsbar_empty.png \
	timeline.png \
	vkey_clr.png \
	vkey_ok.png \
	vkey_shift.png \
	volbg.png \
	border_eventinfo.png \
	bs_br.png \
	bs_tl.png \
	epg_more.png \
	progcl.png \
	progress_small.png \
	starsbar_filled.png \
	vkey_backspace.png \
	vkey_esc.png \
	vkey_right.png \
	vkey_shift_sel.png \
	bs_bl.png \
	bs_l.png \
	bs_t.png \
	def-bar.png \
	epg_next.png \
	progress_bg.png \
	sliderbk.png \
	timeline-now.png \
	vkey_bg.png \
	vkey_left.png \
	vkey_sel.png \
	vkey_space.png
